--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -228,9 +228,10 @@ hr {
   gap: 30px;
 }
 .sale__item {
-  background-repeat: no-repeat;
+  /* background-repeat: no-repeat;
   background-size: cover;
-  background-position: center;
+  background-position: center; */
+  position: relative;
   width: 360px;
   height: 260px;
   -webkit-box-flex: 1;
@@ -250,22 +251,19 @@ hr {
       -ms-flex-direction: column;
           flex-direction: column;
 }
-/* .sale__item_1 {
-  background-image: url(../img/women.jpg);
+.sale__item img {
+  position: absolute;
+  z-index: -1;
 }
-.sale__item_2 {
-  background-image: url(../img/men.jpg);
-}
-.sale__item_3 {
-  background-image: url(../img/kid.jpg);
-}
-.sale__bottom {
-  margin-top: 30px;
-  background-image: url(../img/accesories.jpg);
-} */
+
 .sale__bottom__item {
   min-width: 100%;
   height: 180px;
+  position: relative;
+}
+.sale__bottom__item img {
+  position: absolute;
+  z-index: -1;
 }
 .sale__text {
   color: white;
@@ -437,7 +435,7 @@ hr {
   background-size: cover;
   background-position: center;
   min-height: 448px;
-  /* background-image: url(../img/subscribe-bg.jpg); */
+  /* background-image: url(../static/images/subscribe-bg.jpg); */
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
